# ironOxide

./: Cargo.toml  README.md
src/: dom.rs  error.rs  html_dom.rs  lib.rs  main.rs
src/cli/: mod.rs
src/display/: mod.rs  oxide_display_ncurses.rs  oxide_display_text.rs
src/dom/: element.rs  formatting.rs  mod.rs  node.rs
src/grammar/: html.pest  mod.rs
src/http/: mod.rs
tests/: comments.rs  document.rs  document_empty.rs  document_fragment.rs  element.rs  element_attributes.rs  outputs.rs  svg.rs  text.rs  websites.rs
tests/snapshots/: element__it_can_parse_script_with_content.snap  outputs__it_can_output_complex_html_as_json.snap
