[package]
name = "iron_oxide"
version = "0.1.0"
authors = ["Spencer Mycek <Spence.Mycek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.17.0"
hyper = "0.13.2"
hyper-rustls = "0.20.0"
tokio = {version = "0.2", features = ["full"]}
pretty_env_logger = "0.4.0"
failure = "*"
failure_derive = "*"

