[package]
name = "iron_oxide"
version = "0.1.0"
authors = ["Spencer Mycek <Spence.Mycek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.17.0"
hyper = "0.13.2"
hyper-rustls = "0.20.0"
tokio = {version = "0.2", features = ["full"]}
pest = "2.0"
pest_derive = "2.0"
pretty_env_logger = "0.4.0"
log = "0.4.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.14"
anyhow = "1.0"
rustbox = "*"

[dependencies.clap]
version =  "3.0.0-beta.1"
default-features = false
features = [ "std", "derive", "suggestions", "color", "wrap_help" ]

[dev-dependencies]
indoc = "0.3"
surf = "1.0"
async-std = { version = "1.5", features = ["attributes"]}
insta = "0.16"
